platform/router/envoy.yml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                upgrade_configs:
                  - upgrade_type: websocket
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  name: envoy.access_loggers
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/stdout
                route_config:
                  name: router_ssl
                  virtual_hosts:
                    - name: to_apps
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /digihero
                          route:
                            cluster: digihero.gateway
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/ssl/cert.crt
                    private_key:
                      filename: /etc/ssl/cert.key

  clusters:
    - name: digihero.gateway
      connect_timeout: 1s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      lb_policy: round_robin
      load_assignment:
        cluster_name: digihero.gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: digihero.gateway.apps.internal
                      port_value: 8080

admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
